--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
    "name": "audero-unified-placeholders",
    "version": "1.0.3",
-   "location": "https://github.com/AurelioDeRosa/Audero-Unified-Placeholders.git",
+   "location": "git://github.com/AurelioDeRosa/Audero-Unified-Placeholders.git",
    "description": "Audero Unified Placeholders is a very lightweight cross-browser jQuery plugin to emulate the HTML5 placeholder attribute on browsers that don't support it.",
    "keywords": [
       "jquery",
