--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "grunt": "~0.4.1",
     "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-uglify": "~0.4.0",
+    "grunt-jscs": "^2.6.0",
     "load-grunt-tasks": "~0.4.0",
     "jshint-stylish": "^0.1.5"
   },
