--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.5",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-uglify": "~0.4.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.12.0",
+    "grunt-contrib-uglify": "^0.11.0",
     "grunt-jscs": "^2.6.0",
-    "load-grunt-tasks": "~0.4.0",
-    "jshint-stylish": "^0.1.5"
+    "load-grunt-tasks": "^3.4.0",
+    "jshint-stylish": "^2.1.0"
   },
   "engines": {
     "node": ">=0.10.0"
