--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "grunt-contrib-jshint": "^0.12.0",
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-jscs": "^2.6.0",
-    "load-grunt-tasks": "^3.4.0",
+    "jit-grunt": "^0.9.1",
     "jshint-stylish": "^2.1.0"
   },
   "engines": {
