--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-jscs": "^2.6.0",
     "jit-grunt": "^0.9.1",
-    "jshint-stylish": "^2.1.0"
+    "jshint-stylish": "^2.1.0",
+    "time-grunt": "^1.3.0"
   },
   "engines": {
     "node": ">=0.10.0"
